--- a/index.html
+++ b/index.html
@@ -4,93 +4,119 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Edwin Guerrero | Cybersecurity Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Horizon&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
-<body>
-  <div class="banner">🚧 This site is a work in progress. Stay tuned for updates! 🚧</div>
+<body class="dark-mode">
+  <div class="banner">🚧 This site is under construction. Stay tuned for updates! 🚧</div>
 
   <nav class="sidebar" id="sidebar">
-    <h1>Edwin Guerrero</h1>
-    <div class="subtitle">Cybersecurity in Training</div>
+    <h1 style="font-family: 'Oswald', sans-serif;">Edwin Guerrero</h1>
+    <div class="subtitle glow-text">Cybersecurity in Training</div>
     <ul>
-      <li><a href="#about">About Me</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#certificates">Certificates</a></li>
-      <li><a href="#blog">Blog & Gallery</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="#about"><i class="fas fa-user"></i> About Me</a></li>
+      <li><a href="#skills"><i class="fas fa-tools"></i> Skills & Tools</a></li>
+      <li><a href="#certificates"><i class="fas fa-certificate"></i> Certificates</a></li>
+      <li><a href="#blog"><i class="fas fa-blog"></i> Blog & Gallery</a></li>
+      <li><a href="#contact"><i class="fas fa-envelope"></i> Contact Me</a></li>
     </ul>
+    <button class="mode-toggle" onclick="toggleMode()">🌙/☀️</button>
   </nav>
 
-  <button class="toggle-btn" onclick="toggleSidebar()" id="toggleBtn">☰ Menu</button>
+  <button class="toggle-btn" id="toggleBtn">☰ Menu</button>
 
-  <main style="z-index: 1; position: relative; padding-top: 40px;">
-    
+  <main id="main">
     <section id="about">
       <h2>About Me</h2>
-      <p>My name is Edwin Guerrero — a cybersecurity student based in Boston, originally from San Pedro de Macorís, Dominican Republic...</p>
+      <p>I'm Edwin Guerrero, a cybersecurity student based in Boston, originally from San Pedro de Macorís, Dominican Republic. I specialize in analyzing how systems function — identifying vulnerabilities, recovering from threats, and engineering secure environments.</p>
+      <p>With a strong foundation in system hardening, OSINT, and self-hosted services, I pursue cybersecurity through hands-on practice, structured research, and a mindset focused on ethical responsibility.</p>
+      <p>My interest in Linux-based penetration testing continues to grow, supported by a learn-by-doing approach and a commitment to mastering the tools and concepts that define this industry.</p>
+      <p>This portfolio showcases my current skills, technical philosophy, and professional direction. I invite you to explore and connect.</p>
     </section>
 
-   <section id="skills">
-  <h2>Skills & Tools</h2>
+    <section id="skills">
+      <h2>Skills & Tools</h2>
 
-  <h3>Cybersecurity</h3>
-  <ul>
-    <li>System Hardening</li>
-    <li>Linux Security & Bash Scripting</li>
-    <li>Digital Forensics (FTK Imager, Volatility)</li>
-    <li>Incident Response Basics</li>
-  </ul>
+      <h3>Cybersecurity</h3>
+      <ul>
+        <li>System Hardening</li>
+        <li>Linux Security & Bash Scripting</li>
+        <li>Digital Forensics (FTK Imager, Volatility)</li>
+        <li>Incident Response Basics</li>
+      </ul>
 
-  <h3>UMass Global Cybersecurity Bootcamp</h3>
-  <ul>
-    <li>Risk Management</li>
-    <li>Information Security</li>
-    <li>Network Defense</li>
-    <li>Security Policies and Practices Development</li>
-    <li>Penetration Testing</li>
-    <li>Digital Forensics</li>
-    <li>Security Auditing</li>
-    <li>Capstone Project: Structured Penetration Test</li>
-  </ul>
+      <h3>FiveM Server Development</h3>
+      <ul>
+        <li>Resource pack editing and management</li>
+        <li>QBCore or ESX framework configuration</li>
+        <li>Script debugging and server optimization</li>
+        <li>Lua Scripting</li>
+        <li>Custom gameplay mechanics</li>
+        <li>Client-server interactions</li>
+        <li>UI and interaction logic</li>
+      </ul>
 
-  <h3>FiveM Server Development</h3>
-  <ul>
-    <li>Resource Pack Editing and Management</li>
-    <li>QBCore or ESX Framework Configuration</li>
-    <li>Script Debugging and Server Optimization</li>
-    <li>Lua Scripting</li>
-    <li>Custom Gameplay Mechanics</li>
-    <li>Client-Server Interactions</li>
-    <li>UI and Interaction Logic</li>
-  </ul>
+      <h3>Blender 3D Modeling</h3>
+      <ul>
+        <li>Custom chains, clothing, accessories</li>
+        <li>Model optimization for GTA V compatibility</li>
+        <li>Texture mapping and exporting for FiveM</li>
+      </ul>
 
-  <h3>Blender 3D Modeling</h3>
-  <ul>
-    <li>Custom Chains, Clothing, Accessories</li>
-    <li>Model Optimization for GTA V Compatibility</li>
-    <li>Texture Mapping and Exporting for FiveM</li>
-  </ul>
+      <h3>Server Hosting & Deployment</h3>
+      <ul>
+        <li>VPS setup (Linux or Windows)</li>
+        <li>Database (MySQL) configuration</li>
+        <li>Port forwarding, firewall rules</li>
+      </ul>
 
-  <h3>Server Hosting & Deployment</h3>
-  <ul>
-    <li>VPS Setup (Linux or Windows)</li>
-    <li>Database (MySQL or MariaDB) Configuration</li>
-    <li>Port Forwarding, Firewall Rules</li>
-  </ul>
+      <h3>Basic Networking</h3>
+      <ul>
+        <li>NAT, IP, ports (30120/30110)</li>
+        <li>DDoS mitigation basics</li>
+      </ul>
 
-  <h3>Basic Networking</h3>
-  <ul>
-    <li>NAT, IP, Ports (30120/30110)</li>
-    <li>DDoS Mitigation Basics</li>
-  </ul>
-</section>
+      <h3>Tools</h3>
+      <ul>
+        <!-- Network & Packet Analysis -->
+        <li>Nmap</li>
+        <li>Wireshark</li>
+        <li>Hping3</li>
+        <li>Aircrack-ng</li>
+        <li>airodump-ng</li>
+        <li>Tcpdump</li>
 
+        <!-- Penetration Testing & Exploitation -->
+        <li>Metasploit</li>
+        <li>SEToolkit</li>
+        <li>John the Ripper</li>
 
+        <!-- Forensics & Analysis -->
+        <li>Autopsy</li>
+        <li>FTK Imager</li>
+        <li>Volatility</li>
+
+        <!-- Web Security -->
+        <li>Burp Suite</li>
+
+        <!-- DevOps & Self-Hosting -->
+        <li>Docker</li>
+        <li>Nextcloud</li>
+        <li>Pi-hole</li>
+      </ul>
+    </section>
 
     <section id="certificates">
       <h2>Certificates</h2>
-      <p>CompTIA Security+ – <strong>72%</strong> complete</p>
+
+      <p>CompTIA Security+ – <strong>72%</strong> Complete</p>
+      <div class="progress-bar">
+        <div class="progress-fill" style="width: 72%;">72%</div>
+      </div>
+
+      <p>CompTIA Network+ – <strong>Starting Soon</strong></p>
     </section>
 
     <section id="blog">
@@ -99,14 +125,34 @@
     </section>
 
     <section id="contact">
-      <h2>Contact</h2>
-      <p>Email: <a href="mailto:Fiscov4@proton.me">Fiscov4@proton.me</a></p>
-      <p>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
-      <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
+      <h2>Contact Me</h2>
+      <p>📧 Email: <a href="mailto:Fiscov4@proton.me">Fiscov4@proton.me</a></p>
+      <p>🐱 GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
+      <p>💼 LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
+      <p style="margin-top: 30px;"><em>Thank you for visiting my portfolio. I look forward to the opportunity to connect, collaborate, and contribute — I hope we get the chance to work together soon.</em></p>
     </section>
-
   </main>
 
-  <script src="js/script.js"></script>
+  <script>
+    const toggleBtn = document.getElementById('toggleBtn');
+    const sidebar = document.getElementById('sidebar');
+    const main = document.getElementById('main');
+
+    toggleBtn.addEventListener('click', () => {
+      sidebar.classList.toggle('hidden');
+      if (sidebar.classList.contains('hidden')) {
+        toggleBtn.style.left = '20px';
+        main.style.marginLeft = '20px';
+      } else {
+        toggleBtn.style.left = '260px';
+        main.style.marginLeft = '260px';
+      }
+    });
+
+    function toggleMode() {
+      document.body.classList.toggle('dark-mode');
+      document.body.classList.toggle('light-mode');
+    }
+  </script>
 </body>
 </html>
