--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <section id="contact">
       <h2>Contact Me</h2>
       <p>📧 Email: <a href="mailto:Fiscov4@proton.me">Fiscov4@proton.me</a></p>
-      <p>🐱 GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
+      <p>🐱 GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/FiscoV4</a></p>
       <p>💼 LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
       <p style="margin-top: 30px;"><em>Thank you for visiting my portfolio. I look forward to the opportunity to connect, collaborate, and contribute — I hope we get the chance to work together soon.</em></p>
     </section>
